<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="#A62929"
    tools:context=".MainActivity2">

    <Button
        android:id="@+id/button_first"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="200dp"
        android:layout_marginEnd="200dp"
        android:text="@string/Enviar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.662"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="568dp" />

    <android.support.design.widget.TextInputEditText
        android:id="@+id/textoEnviado"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="hint"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="438dp"
        tools:text="@string/textoEnviado" />

    <TextView
        android:id="@+id/texto1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/texto1"
        tools:layout_editor_absoluteX="138dp"
        tools:layout_editor_absoluteY="291dp" />

    <TextView
        android:id="@+id/texto2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/texto2"
        tools:layout_editor_absoluteX="108dp"
        tools:layout_editor_absoluteY="331dp" />

    <TextView
        android:id="@+id/tetxo3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/texto3"
        tools:layout_editor_absoluteX="144dp"
        tools:layout_editor_absoluteY="363dp" />

    <LinearLayout
        android:layout_width="409dp"
        android:layout_height="289dp"
        android:orientation="horizontal"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            tools:srcCompat="@drawable/mensagem" />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>