<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RespostaActivity">

    <Button
        android:id="@+id/button_secundario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="162dp"
        android:layout_marginTop="62dp"
        android:layout_marginEnd="162dp"
        android:layout_marginBottom="83dp"
        android:text="@string/Voltar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/respostaFinal" />

    <TextView
        android:id="@+id/respostaFinal"
        android:layout_width="32dp"
        android:layout_height="0dp"
        android:layout_marginStart="189dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="190dp"
        android:layout_marginBottom="16dp"
        android:text="@string/respostaFinal"
        app:layout_constraintBottom_toTopOf="@+id/button_secundario"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="409dp"
        android:layout_height="250dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="50dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/respostaFinal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/imageView3"
            android:visibility="visible"
            tools:srcCompat="@drawable/resposta"
            tools:visibility="visible" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>